Update base image to have java 21 available for sonar (#104)
* Update base image to have java 21 available for sonar

* upgrade mockito for jdk 21

* update jacoco

* Fix some unit tests following the upgrade from Java 11 to Java 21.

* Fix deprecated URL usage for Sonar

* log exception for Sonar

---------

Co-authored-by: ClaudeCarpentier <c.carpentier@tricentis.com>
Co-authored-by: JérômeLassus <j.lassus@tricentins.com>